tests/snapshots/diagnostics/snapshots/snapshot_diagnostics__snapshots__diagnostics__snapshot_0058_let_annotation_dual_span_full_rendered.snap
---
source: tests/snapshots/diagnostics/mod.rs
expression: output
---
error[E300]: Annotation Type Mismatch

The value of `x` does not match its type annotation.

  examples/type_system/failing/106_let_annotation_int_string.flx:28:18
   |
28 |     let x: Int = "hello"
   |                  ^^^^^^^
   |                  ------- this value has type `String`

   |            --- but `x` was annotated as `Int`

Note:
  annotated type: Int
  value type: String

Help:
  Change `x` to a `Int` value or update the annotation.
